added card feature and its flex feature

--- a/parallax.html
+++ b/parallax.html
@@ -29,22 +29,33 @@
         </div>
     </div>
 
-    <section class="section section-light">
-        <h2>Section one</h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam qui quam vero repudiandae eos recusandae
-            atque
-            provident rerum, necessitatibus natus ipsum nostrum est error dolor at magni id. Dolorum sint, odit quo
-            accusamus sit aliquam asperiores aliquid, est alias rerum ad distinctio maxime assumenda veritatis dolor
-            ipsum
-            error cupiditate adipisci aperiam mollitia, tenetur dolores? Delectus odio culpa dolorem repellat nulla
-            similique obcaecati enim voluptatem ducimus id animi officia possimus suscipit molestias, odit dolor, vel
-            eum
-            debitis vero veritatis, fugiat magni voluptate. Vel pariatur harum in ex quos debitis doloremque commodi
-            illo
-            perspiciatis? Laborum facilis doloremque beatae debitis labore reiciendis officiis!
-        </p>
+    <section class="section section-light section-flex">
+        <div class="card">
+            <img src="img_avatar.png" alt="Avatar" style="width:100%">
+            <div class="container">
+                <h4><b>John Doe</b></h4>
+                <p>Architect & Engineer</p>
+            </div>
+        </div>
+        <div class="card">
+            <img src="img_avatar.png" alt="Avatar" style="width:100%">
+            <div class="container">
+                <h4><b>John Doe</b></h4>
+                <p>Architect & Engineer</p>
+            </div>
+        </div>
+        <div class="card">
+            <img src="img_avatar.png" alt="Avatar" style="width:100%">
+            <div class="container">
+                <h4><b>John Doe</b></h4>
+                <p>Architect & Engineer</p>
+            </div>
+        </div>
     </section>
+
+
+
+
 
     <div class="pimg2">
         <div class="ptext">
