added pictures for cards and its styling

--- a/parallax.html
+++ b/parallax.html
@@ -31,24 +31,27 @@
 
     <section class="section section-light section-flex">
         <div class="card">
-            <img src="img_avatar.png" alt="Avatar" style="width:100%">
+            <img src="cardimage1.jpg" alt="Avatar">
             <div class="container">
-                <h4><b>John Doe</b></h4>
-                <p>Architect & Engineer</p>
+                <h4><b>Bootstrap v3.3.6</b></h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et natus tenetur soluta quis dolore
+                    delectus. Illo consequatur fugit quas? Esse voluptatibus in dolor porro inventore?/p>
             </div>
         </div>
         <div class="card">
-            <img src="img_avatar.png" alt="Avatar" style="width:100%">
+            <img src="cardimage2.jpg" alt="Avatar">
             <div class="container">
-                <h4><b>John Doe</b></h4>
-                <p>Architect & Engineer</p>
+                <h4><b>Responsive Design</b></h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem aliquam, at earum ea neque nam, suscipit
+                    optio vero perspiciatis, laborum sint recusandae. Fugiat, voluptas quaerat.</p>
             </div>
         </div>
         <div class="card">
-            <img src="img_avatar.png" alt="Avatar" style="width:100%">
+            <img src="cardimage3.jpg" alt="Avatar">
             <div class="container">
-                <h4><b>John Doe</b></h4>
-                <p>Architect & Engineer</p>
+                <h4><b>Parallax Layout</b></h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid rem exercitationem excepturi odio.
+                    Nobis illum dignissimos adipisci accusamus nisi modi soluta placeat excepturi nihil facere.</p>
             </div>
         </div>
     </section>
