added columns and styling

--- a/parallax.html
+++ b/parallax.html
@@ -29,9 +29,9 @@
         </div>
     </div>
 
-    <section class="section section-light section-flex">
+    <div class="section section-light section-flex">
         <div class="card">
-            <img src="cardimage1.jpg" alt="Avatar">
+            <img src="cardimage1.jpg">
             <div class="container">
                 <h4><b>Bootstrap v3.3.6</b></h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et natus tenetur soluta quis dolore
@@ -39,7 +39,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="cardimage2.jpg" alt="Avatar">
+            <img src="cardimage2.jpg">
             <div class="container">
                 <h4><b>Responsive Design</b></h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem aliquam, at earum ea neque nam, suscipit
@@ -47,14 +47,35 @@
             </div>
         </div>
         <div class="card">
-            <img src="cardimage3.jpg" alt="Avatar">
+            <img src="cardimage3.jpg">
             <div class="container">
                 <h4><b>Parallax Layout</b></h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid rem exercitationem excepturi odio.
                     Nobis illum dignissimos adipisci accusamus nisi modi soluta placeat excepturi nihil facere.</p>
             </div>
         </div>
-    </section>
+    </div>
+
+    <div class="column">
+        <img src="2columnpic1.jpg" style="height: 25%">
+        <h4>Column 1</h4>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint facilis, quasi error, labore excepturi
+            aut sed molestiae quidem neque tenetur reiciendis explicabo, hic quia et quas expedita placeat.
+            Deleniti, dolorum magni! Provident sed assumenda fugiat. Expedita, sapiente dolore totam amet soluta
+            maxime nihil molestiae veritatis quod fugit nesciunt? Quam, nobis?</p>
+
+    </div>
+    <div class="column">
+        <img src="2columnpic2.jpg">
+        <h4>Column 2</h4>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint facilis, quasi error, labore excepturi
+            aut sed molestiae quidem neque tenetur reiciendis explicabo, hic quia et quas expedita placeat.
+            Deleniti, dolorum magni! Provident sed assumenda fugiat. Expedita, sapiente dolore totam amet soluta
+            maxime nihil molestiae veritatis quod fugit nesciunt? Quam, nobis?</p>
+    </div>
+    </div>
+
+
 
 
 
