added button with up arrow and some styling

--- a/parallax.html
+++ b/parallax.html
@@ -10,6 +10,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Parallax Website Demo</title>
     <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
 
 <body>
@@ -56,23 +58,24 @@
         </div>
     </div>
 
-    <div class="column">
-        <img src="2columnpic1.jpg" style="height: 25%">
-        <h4>Column 1</h4>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint facilis, quasi error, labore excepturi
-            aut sed molestiae quidem neque tenetur reiciendis explicabo, hic quia et quas expedita placeat.
-            Deleniti, dolorum magni! Provident sed assumenda fugiat. Expedita, sapiente dolore totam amet soluta
-            maxime nihil molestiae veritatis quod fugit nesciunt? Quam, nobis?</p>
+    <div class="section section-light section-flex">
+        <div class="column">
+            <img src="2columnpic1.jpg">
+            <h4>Column 1</h4>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint facilis, quasi error, labore excepturi
+                aut sed molestiae quidem neque tenetur reiciendis explicabo, hic quia et quas expedita placeat.
+                Deleniti, dolorum magni! Provident sed assumenda fugiat. Expedita, sapiente dolore totam amet soluta
+                maxime nihil molestiae veritatis quod fugit nesciunt? Quam, nobis?</p>
 
-    </div>
-    <div class="column">
-        <img src="2columnpic2.jpg">
-        <h4>Column 2</h4>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint facilis, quasi error, labore excepturi
-            aut sed molestiae quidem neque tenetur reiciendis explicabo, hic quia et quas expedita placeat.
-            Deleniti, dolorum magni! Provident sed assumenda fugiat. Expedita, sapiente dolore totam amet soluta
-            maxime nihil molestiae veritatis quod fugit nesciunt? Quam, nobis?</p>
-    </div>
+        </div>
+        <div class="column">
+            <img src="2columnpic2.jpg">
+            <h4>Column 2</h4>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint facilis, quasi error, labore excepturi
+                aut sed molestiae quidem neque tenetur reiciendis explicabo, hic quia et quas expedita placeat.
+                Deleniti, dolorum magni! Provident sed assumenda fugiat. Expedita, sapiente dolore totam amet soluta
+                maxime nihil molestiae veritatis quod fugit nesciunt? Quam, nobis?</p>
+        </div>
     </div>
 
 
@@ -139,7 +142,12 @@
     <div class="pimg1">
         <div class="ptext">
             <span class="border">Cherry Blossom</span>
+            <button onclick=" scrolltoTop()" id="myBtn" title="Goes back to the top">
+                <i class="fas fa-angle-double-up fa-3x"></i>
+            </button>
+
         </div>
+    </div>
     </div>
 
 
