added hover styling for scroll button

--- a/parallax.html
+++ b/parallax.html
@@ -144,7 +144,7 @@
             <span class="border">Cherry Blossom</span>
         </div>
 
-        <button onclick=" scrolltoTop()" id="myBtn" title="Goes back to the top">
+        <button onclick=" scrolltoTop()" id="myBtn" title="Scrolls back">
             <i class="fas fa-angle-double-up fa-3x"></i>
         </button>
 
