--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Parallax Website Demo</title>
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
@@ -33,7 +33,7 @@
 
     <div class="section section-light section-flex">
         <div class="card">
-            <img src="cardimage1.jpg">
+            <img src="images/cardimage1.jpg">
             <div class="container">
                 <h4><b>Bootstrap v3.3.6</b></h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et natus tenetur soluta quis dolore
@@ -41,7 +41,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="cardimage2.jpg">
+            <img src="images/cardimage2.jpg">
             <div class="container">
                 <h4><b>Responsive Design</b></h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem aliquam, at earum ea neque nam, suscipit
@@ -49,7 +49,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="cardimage3.jpg">
+            <img src="images/cardimage3.jpg">
             <div class="container">
                 <h4><b>Parallax Layout</b></h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid rem exercitationem excepturi odio.
@@ -60,7 +60,7 @@
 
     <div class="section section-light section-flex">
         <div class="column">
-            <img src="2columnpic1.jpg">
+            <img src="images/2columnpic1.jpg">
             <h4>Column 1</h4>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint facilis, quasi error, labore excepturi
                 aut sed molestiae quidem neque tenetur reiciendis explicabo, hic quia et quas expedita placeat.
@@ -69,7 +69,7 @@
 
         </div>
         <div class="column">
-            <img src="2columnpic2.jpg">
+            <img src="images/2columnpic2.jpg">
             <h4>Column 2</h4>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint facilis, quasi error, labore excepturi
                 aut sed molestiae quidem neque tenetur reiciendis explicabo, hic quia et quas expedita placeat.
@@ -77,10 +77,6 @@
                 maxime nihil molestiae veritatis quod fugit nesciunt? Quam, nobis?</p>
         </div>
     </div>
-
-
-
-
 
 
 
@@ -144,7 +140,7 @@
             <span class="border">Cherry Blossom</span>
         </div>
 
-        <button onclick=" scrolltoTop()" id="myBtn" title="Scrolls back">
+        <button onclick="scrolltoTop()" id="myBtn" title="Scrolls back">
             <i class="fas fa-angle-double-up fa-3x"></i>
         </button>
 
@@ -155,5 +151,6 @@
 
 
 </body>
+<script src="scripts/main.js"></script>
 
 </html>
