fixed nav bar styling

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li><a href="#nav">Home</a></li>
             <li><a href="#aboutus">About Us</a></li>
             <li><a href="#services">Services</a></li>
-            <li><a href="#contactform">Contact</a></li>
+            <li><a href="#contactus">Contact</a></li>
             <li><a href="#External">External</a></li>
         </ul>
     </div>
@@ -31,7 +31,7 @@
         </div>
     </div>
 
-    <div class="section section-light section-flex">
+    <div class="section section-light section-flex" id="aboutus">
         <div class="card">
             <img src="images/cardimage1.jpg">
             <div class="container">
@@ -80,27 +80,28 @@
 
 
 
-    <div class="pimg2">
+    <div class="pimg2" id="services">
         <div class="ptext">
-            <span class="border trans">Image Two text</span>
+
+            <span class="border trans">The Beauty Within</span>
         </div>
     </div>
 
 
 
     <section class="section section-dark">
-        <h2>Section Two</h2>
+        <h2>Our Services</h2>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam qui quam vero repudiandae eos recusandae
-            atque
-            provident rerum, necessitatibus natus ipsum nostrum est error dolor at magni id. Dolorum sint, odit quo
-            accusamus sit aliquam asperiores aliquid, est alias rerum ad distinctio maxime assumenda veritatis dolor
-            ipsum
+            atque provident rerum, necessitatibus natus ipsum nostrum est error dolor at magni id. Dolorum sint, odit
+            quo accusamus sit aliquam asperiores aliquid, est alias rerum ad distinctio maxime assumenda veritatis dolor
+            ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione consequatur sed dicta placeat
+            distinctio explicabo aliquid maxime natus odit. Repellat ducimus temporibus dolore eum perspiciatis?
 
         </p>
     </section>
 
-    <div class="pimg3">
+    <div class="pimg3" id="contactus">
         <div class="ptext">
             <span class="border trans">Image Three text</span>
         </div>
@@ -109,7 +110,7 @@
 
 
     <section class="section section-dark">
-        <h2>Section Three</h2>
+        <h2>Contact Us</h2>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam qui quam vero repudiandae eos recusandae
             atque
