added some styling to form

--- a/index.html
+++ b/index.html
@@ -111,29 +111,28 @@
 
     <section class="section section-dark">
         <h2>Contact Us</h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam qui quam vero repudiandae eos recusandae
-            atque
-            provident rerum, necessitatibus natus ipsum nostrum est error dolor at magni id. Dolorum sint, odit quo
-            accusamus sit aliquam asperiores aliquid, est alias rerum ad distinctio maxime assumenda veritatis dolor
-            ipsum
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias deserunt ea vero rerum aspernatur sit
-            adipisci odio nesciunt quam, ipsam sequi aperiam labore. Quis minus, tempora delectus iusto placeat
-            blanditiis ex assumenda quod quisquam officiis dolorum! Dolore et numquam delectus quae porro, maxime, animi
-            fuga ea quam tempore vitae blanditiis excepturi perferendis? Beatae, odit quisquam magni at, laborum a velit
-            ut placeat voluptas sit, ipsum voluptatem vero. Quod inventore repellat fugiat architecto rem laudantium
-            dicta? Ratione eaque fuga ipsum, reiciendis consectetur quam error sequi? Voluptas excepturi, itaque
-            eligendi saepe deserunt debitis laborum! Quod unde expedita doloremque consequatur laboriosam, nobis est
-            nostrum autem aliquam voluptas! Alias atque facilis enim quibusdam blanditiis cupiditate! Sunt est nisi
-            earum reprehenderit, modi tempora ipsa sit nam dicta esse fugiat iusto eveniet cum nostrum et deleniti
-            voluptates voluptatum magni quod cumque quaerat error sapiente ratione? Beatae nihil dignissimos iste amet
-            officiis magnam fuga unde necessitatibus, aspernatur architecto placeat ipsa impedit debitis enim sapiente
-            qui pariatur ipsum! Placeat obcaecati sed labore nulla nemo blanditiis, dolor delectus a nobis
-            exercitationem molestiae ducimus repellendus perspiciatis impedit quidem minus autem! Quidem numquam,
-            incidunt cupiditate expedita nostrum ratione quo voluptatum, consequuntur harum asperiores voluptatem id
-            inventore ex velit. Quos, culpa magnam!
 
-        </p>
+        <div class="container2">
+            <form action="action_page.php">
+                <label for="fname">First Name</label>
+                <input type="text" id="fname" name="firstname" placeholder="Your name..">
+                <br>
+
+                <label for="lname">Last Name</label>
+                <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+                <br>
+
+
+
+                <label for="message">Message </label>
+                <textarea id="message" name="message" placeholder="Your Message here.." style="height:100px"></textarea>
+                <br>
+                <input type="submit" value="Submit">
+
+            </form>
+    </section>
+    </div>
+
     </section>
 
     <div class="pimg1">
