changed wording for 3 pic

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="#aboutus">About Us</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#contactus">Contact</a></li>
-            <li><a href="#External">External</a></li>
+
         </ul>
     </div>
 
@@ -103,7 +103,7 @@
 
     <div class="pimg3" id="contactus">
         <div class="ptext">
-            <span class="border trans">Image Three text</span>
+            <span class="border trans">Come and </span>
         </div>
     </div>
 
