changed color text styling for sections with parallax images

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div id="nav">
         <ul>
-            <li><a href="#nav">Home</a></li>
+            <li><a href="#nav">Home</a> </li>
             <li><a href="#aboutus">About Us</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#contactus">Contact</a></li>
@@ -32,6 +32,7 @@
     </div>
 
     <div class="section section-light section-flex" id="aboutus">
+
         <div class="card">
             <img src="images/cardimage1.jpg">
             <div class="container">
@@ -83,7 +84,7 @@
     <div class="pimg2" id="services">
         <div class="ptext">
 
-            <span class="border trans">The Beauty Within</span>
+            <span class="border trans" style="color:black">The Beauty Within</span>
         </div>
     </div>
 
@@ -103,7 +104,7 @@
 
     <div class="pimg3" id="contactus">
         <div class="ptext">
-            <span class="border trans">Come and </span>
+            <span class="border trans" style="color:black">Come and </span>
         </div>
     </div>
 
