fixed glitch to the home link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div id="nav">
         <ul>
-            <li><a href="#nav">Home</a> </li>
+            <li><a href="#home">Home</a> </li>
             <li><a href="#aboutus">About Us</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#contactus">Contact</a></li>
@@ -25,7 +25,7 @@
         </ul>
     </div>
 
-    <div class="pimg1">
+    <div class="pimg1" id="home">
         <div class="ptext">
             <span class="border">Cherry Blossom</span>
         </div>
