fixed styling on text area box

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="container">
                 <h4><b>Bootstrap v3.3.6</b></h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et natus tenetur soluta quis dolore
-                    delectus. Illo consequatur fugit quas? Esse voluptatibus in dolor porro inventore?/p>
+                    delectus. Illo consequatur fugit quas? Esse voluptatibus in dolor porro inventore?</p>
             </div>
         </div>
         <div class="card">
