removed padding for card class

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div class="pimg2" id="services">
         <div class="ptext">
 
-            <span class="border trans" style="color:black">The Beauty Within</span>
+            <span class="border trans" style="color:black; font-weight: bold;">The Beauty Within</span>
         </div>
     </div>
 
@@ -104,7 +104,7 @@
 
     <div class="pimg3" id="contactus">
         <div class="ptext">
-            <span class="border trans" style="color:black">Come and </span>
+            <span class="border trans" style="color:black; font-weight: bold;">Come and </span>
         </div>
     </div>
 
