fixed vertical alignment for messagestyle class

--- a/index.html
+++ b/index.html
@@ -124,12 +124,13 @@
                 <br>
 
 
-
-                <label for="message">Message </label>
-                <textarea id="message" name="message" placeholder="Your Message here.." style="height:100px"></textarea>
-                <br>
-                <input type="submit" value="Submit">
-
+                <p class="messagestyle">
+                    <label for="message">Message </label>
+                    <textarea id="message" name="message" placeholder="Your Message here.."
+                        style="height:100px"></textarea>
+                    <br>
+                    <input type="submit" value="Submit">
+                </p>
             </form>
     </section>
     </div>
